# omdb-fixtures-loader

./: .flake8  .gitignore  .isort.cfg  Makefile  README.md  pyproject.toml  setup.py  tox.ini
.circleci/: config.yml
.github/workflows/: main.yml
omdb_fixtures_loader/: loader.py
src/: loader.py
