[tool.poetry]
name = "omdb-fixtures-loader"
version = "0.1.0"
description = "Load data from the Open Movie Database and build fixture"
authors = ["Etchegoyen Matthieu <etchegom@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
isort = "^5.12.0"
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core>=1.0.0", "setuptools", "wheel"]
build-backend = "poetry.core.masonry.api"
# build-backend = "setuptools.build_meta"

[tool.black]
line-length = 100
include = '\.pyi?$'
extend-exclude = '.venv|migrations|node_modules|assets|dist|templates'
skip-magic-trailing-comma = "false"
