[tool.poetry]
authors = ["Etchegoyen Matthieu <etchegom@gmail.com>"]
description = "Load data from the Open Movie Database and build fixture"
name = "omdb-fixtures-loader"
version = "0.1.0"

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
isort = "^5.12.0"
flake8 = "^6.0.0"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0", "setuptools", "wheel"]
# build-backend = "setuptools.build_meta"

[tool.black]
exclude = '.venv|dist|build'
include = '\.pyi?$'
line-length = 100
skip-magic-trailing-comma = "false"

[tool.flake8]
extend-ignore = ["E501,W503"]
format = "${cyan}%(path)s${reset}:${yellow_bold}%(row)d${reset}:${green_bold}%(col)d${reset}: ${red_bold}%(code)s${reset} %(text)s"
max-complexity = 10
max-line-length = 100

[tool.isort]
default_section = "FIRSTPARTY"
float_to_top = true
force_grid_wrap = 0
include_trailing_comma = true
known_third_party = [
  "requests",
]
line_length = 100
multi_line_output = 3
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]
use_parentheses = true
skip_glob = [".venv"]
