[tool.poetry]
authors = ["Etchegoyen Matthieu <etchegom@gmail.com>"]
description = "Load data from the Open Movie Database and build fixture"
name = "omdb-fixtures-loader"
version = "0.1.0"

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.group.dev.dependencies]
black = "^23.9.1"
ruff = "^0.0.292"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0", "setuptools", "wheel"]
# build-backend = "setuptools.build_meta"

[tool.black]
line-length = 100
include = '\.pyi?$'
skip-magic-trailing-comma = "false"
exclude = '''
/(
    \.git
  | \.venv
)/
'''

[tool.ruff]
select = [
  "F",   # Pyflakes
  "E",   # pycodestyle
  "W",   # pycodestyle
  "C90", # mccabe
  "I",   # isort
  "UP",  # pyupgrade
  "N",   # pep8-naming
  "BLE", # flake8-blind-except
  "FBT", # flake8-boolean-trap
  "B",   # flake8-bugbear
  "C4",  # flake8-comprehensions
  "ISC", # flake8-implicit-str-concat
  "T20", # flake8-print
  "Q",   # flake8-quotes
  "TID", # flake8-tidy-imports
  "PGH", # pygrep-hooks
  "INP", # flake8-no-pep420
]
line-length = 100
show-fixes = true
fixable = ["ALL"]
unfixable = ["B"]
target-version = "py311"
exclude = [".venv"]

[tool.ruff.isort]
case-sensitive = true
known-third-party = [
  "django",
  "environ",
  "factory",
  "ninja",
  "omdb_fixtures_loader",
]
split-on-trailing-comma = true
section-order = [
  "future",
  "standard-library",
  "third-party",
  "first-party",
  "local-folder",
]
required-imports = ["from __future__ import annotations"]
